# RSFEC_System_Design

./: CMakeLists.txt  README.md  main.cpp
include/Channel Interface/: ChannelInterfaceReceiver.h  ChannelInterfaceTransmitter.h
include/Codeword/: Codeword.h  Encodedmessage.h  Generatorpolynomial.h  Message.h
include/DecoderInterface/: RSFECdecoderInterface.h  RSFEDdecoderInterface.h  RSdecoderInterface.h
include/Decoding/: Chiensearch.h  Forneyalgorithm.h  KeyequationEEA.h  RSFECdecoder.h  RSFEDdecoder.h  RSdecoder.h  Syndrome.h
include/Encoding/: RSencoder.h  RSencoderInterface.h
include/Galios Field operations/: GF2mAlpha.h
src/Channel Interface/: ChannelInterfaceReceiver.cpp  ChannelInterfaceTransmitter.cpp
src/Codeword/: Codeword.cpp  Encodedmessage.cpp  Generatorpolynomial.cpp  Message.cpp
src/DecoderInterface/: RSFECdecoderInterface.cpp  RSFEDdecoderInterface.cpp  RSdecoderInterface.cpp
src/Decoding/: Chiensearch.cpp  Forneyalgorithm.cpp  KeyequationEEA.cpp  RSFECdecoder.cpp  RSFEDdecoder.cpp  RSdecoder.cpp  Syndrome.cpp
src/Encoding/: RSencoder.cpp  RSencoderInterface.cpp
src/Galios Field operations/: GF2mAlpha.cpp
test/: main.cpp  test_Chiensearch.cpp  test_Codeword.cpp  test_GF2mAlpha.cpp  test_Generatorpolynomial.cpp  test_KeyEquation.cpp  test_RSFECdecoder.cpp  test_RSFEDdecoder.cpp  test_RSdecoder.cpp  test_RSencoder1.cpp  test_RSencoderInterface.cpp  test_Syndrome.cpp
